made download button open new tab

--- a/download.html
+++ b/download.html
@@ -36,7 +36,7 @@
         <div class="centerdiv">
         <h1 style="font-family: 'Poppins', sans-serif; font-weight: 700;">Onix Client Download</h1>
         <p>
-            <b>Onix Client</b> can be downloaded from the <a href="https://discord.gg/onixclient">official Onix Client discord.</a><br>
+            <b>Onix Client</b> can be downloaded from the <a href="https://discord.gg/onixclient"target="_blank" rel="noopener noreferrer">official Onix Client discord.</a><br>
             <br>Follow the steps in the <b>#download</b> channel to download the client.<br><br><br><br>
             <div><center>
                 <a href="https://discord.gg/onixclient">
