fix embed + suspicious

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Onix Client</title>
     <meta content="Onix Client" property="og:title">
     <meta content="https://onixclient.com" property="og:url">
-	<meta content="Onix Client is a legitimate client for Minecraft: Bedrock Edition.\nWith over 40 fully customisable, built-in modules, and over 75 fully customisable, community-made modules.\nOnix Client is truely the best client for Minecraft: Bedrock Edition." property="og:description">
+	<meta content="Onix Client is a legitimate client for Minecraft: Bedrock Edition.
+          With over 40 fully customisable, built-in modules, and over 75 fully customisable, community-made modules.
+          Onix Client is truely the best client for Minecraft: Bedrock Edition." property="og:description">
     <meta content="https://onixclient.com/assets/biglogo.png" property="og:image">
     <meta content="#008FC1" data-react-helmet="true" name="theme-color">
 </head>
@@ -40,7 +42,10 @@
                 <div>
                     <img src="assets/main.png" width="640" height="360" class="overlapA"><br>
                     <img src="assets/theming.png" width="640" height="360" class="overlapB">
-                    <img src="assets/biglogo.png" width="200" height="200" class="overlapC">
+                    <div>
+                        <a href="https://discord.gg/onixclient">
+                        <img src="assets/biglogo.png" width="200" height="200" class="overlapC">
+                    </div>            
                 </div>
             </p><!--<a href="scripting/index">a</a-->
         </div>
