--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta content="https://onixclient.com" property="og:url">
     <meta content="Onix Client is a legitimate client for Minecraft: Bedrock Edition.
           With over 40 fully customisable, built-in modules, and over 75 fully customisable, community-made modules.
-          Onix Client is truely the best client for Minecraft: Bedrock Edition." property="og:description">
+          Onix Client is truly the best client for Minecraft: Bedrock Edition." property="og:description">
     <meta content="https://onixclient.com/assets/biglogo.png" property="og:image">
     <meta content="#008FC1" data-react-helmet="true" name="theme-color">
 </head>
@@ -48,7 +48,7 @@
             <b>75</b> fully customisable, community-made modules.
             <br>
             <br>
-            <b>Onix Client</b> is truely the
+            <b>Onix Client</b> is truly the
             <b>best</b> client for
             <b>Minecraft: Bedrock Edition</b>.
             <br>
