--- a/twitter.html
+++ b/twitter.html
@@ -8,6 +8,7 @@
     <title>Onix Client</title>
     <meta content="Onix Client Twitter" property="og:title">
     <meta content="Onix Client - Twitter" property="og:site_name">
+    <meta content="The best Minecraft: Bedrock Edition client! (Windows 10/11 only)." property="og:description">
     <meta content="https://onixclient.com/twitter" property="og:url">
     <meta content="https://onixclient.com/assets/twitterlogo.png" property="og:image">
     <meta content="#008FC1" data-react-helmet="true" name="theme-color">
