--- a/discord.html
+++ b/discord.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="onixlogo" href="favicon.ico">
     <title>Onix Client</title>
     <meta content="Onix Client Discord" property="og:title">
-    <meta content="https://onixclient.com/discord" property="og:url">
+    <meta content="https://discord.gg/onixclient" property="og:url">
     <meta content="The best Minecraft: Bedrock Edition client! (Windows 10/11 only)." property="og:description">
     <meta content="https://onixclient.com/assets/discord.png" property="og:image">
     <meta content="#008FC1" data-react-helmet="true" name="theme-color">
