--- a/changelog.html
+++ b/changelog.html
@@ -103,3 +103,5 @@
 - Added `Show Chat Message` setting to `Screenshot` settings
 - Added `Stop All Momentum` key in `Creative Tools`
 </md-block>
+	</body>
+</html>
