--- a/changelog.html
+++ b/changelog.html
@@ -57,6 +57,7 @@
     - Added click and drag positioning
 - Added `Only Display When Holding Bow/Crossbow` to `Arrow Counter`
 - Added `Don't Display If No Arrows` to `Arrow Counter`
+- Added `Added Don't Display If No Pots/Soups` to `Potion Counter`
 - Added `Always Center` setting to `Compass`
 - Added a height offset to `Light Overlay` to combat snow layers
 - Added `Day Counter`
