--- a/changelog.html
+++ b/changelog.html
@@ -1,12 +1,17 @@
 <script type="module" src="https://md-block.verou.me/md-block.js"></script>
 <html>
-    <head>
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8810880028192246" crossorigin="anonymous"></script>
-        <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
-        <link rel="stylesheet" href="styles/style.css"/>
-        <link rel="icon" type="onixlogo" href="favicon.ico">
-        <title>Onix Client</title>
-    </head>
+<head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8810880028192246" crossorigin="anonymous"></script>
+    <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
+    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="icon" type="onixlogo" href="favicon.ico">
+    <title>Onix Client</title>
+    <meta content="Onix Client Changelog" property="og:title">
+    <meta content="https://discord.gg/onixclient" property="og:url">
+    <meta content="The best Minecraft: Bedrock Edition client! (Windows 10/11 only)." property="og:description">
+    <meta content="https://onixclient.com/assets/biglogo.png" property="og:image">
+    <meta content="#008FC1" data-react-helmet="true" name="theme-color">
+</head>
     <body>
 		<div class="topbar">
             <div class="logothing">
@@ -23,7 +28,7 @@
                 <a href="license">License</a>
                 <a href="https://onixclient.com/patreon"target="_blank" rel="noopener noreferrer">Donate</a>
                 <a href="https://docs.onixclient.com"target="_blank" rel="noopener noreferrer">Scripting</a>
-                <a href="download" class="download">Download</a>
+                <a href="download">Download</a>
             </span>
         </div>
 		<br><br>
