--- a/changelog.html
+++ b/changelog.html
@@ -1,4 +1,4 @@
-<script type="module" src="https://md-block.verou.me/md-block.js"></script>
+<!DOCTYPE html>
 <html>
 <head>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8810880028192246" crossorigin="anonymous"></script>
@@ -6,36 +6,37 @@
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="icon" type="onixlogo" href="favicon.ico">
     <title>Onix Client</title>
-    <meta content="Onix Client Changelog" property="og:title">
-    <meta content="https://discord.gg/onixclient" property="og:url">
-    <meta content="The best Minecraft: Bedrock Edition client! (Windows 10/11 only)." property="og:description">
+    <meta content="Onix Client" property="og:title">
+    <meta content="https://onixclient.com" property="og:url">
+    <meta content="Onix Client is a legitimate client for Minecraft: Bedrock Edition.
+          With over 40 fully customisable, built-in modules, and over 75 fully customisable, community-made modules.
+          Onix Client is truly the best client for Minecraft: Bedrock Edition." property="og:description">
     <meta content="https://onixclient.com/assets/biglogo.png" property="og:image">
     <meta content="#008FC1" data-react-helmet="true" name="theme-color">
 </head>
-    <body>
-		<div class="topbar">
-            <div class="logothing">
-                <a href="https://onixclient.com">
-                    <img src="assets/biglogo.png" width="45" height="45" alt="logo">
-                    <span class="name">
-                        ONIX CLIENT
-                    </span>
-                </a>
-            </div>
-            <span class="navbar">
-                <a href="https://onixclient.com">Home</a>
-                <a href="faq">FAQ</a>
-                <a href="license">License</a>
-                <a href="https://onixclient.com/patreon"target="_blank" rel="noopener noreferrer">Donate</a>
-                <a href="https://docs.onixclient.com"target="_blank" rel="noopener noreferrer">Scripting</a>
-                <a href="download">Download</a>
-            </span>
+<body>
+    <div class="topbar">
+        <div class="logothing">
+            <a href="https://onixclient.com">
+                <img src="assets/biglogo.png" width="45" height="45" alt="logo">
+                <span class="name">
+                    ONIX CLIENT
+                </span>
+            </a>
         </div>
+        <span class="navbar">
+            <a href="https://onixclient.com">Home</a>
+            <a href="faq">FAQ</a>
+            <a href="license">License</a>
+            <a href="https://onixclient.com/patreon" target="_blank" rel="noopener noreferrer">Donate</a>
+            <a href="https://docs.onixclient.com" target="_blank" rel="noopener noreferrer">Scripting</a>
+            <a href="download" class="download">Download</a>
+        </span>
+    </div>
 		<br><br>
+			<script type="module" src="https://md-block.verou.me/md-block.js"></script>
 <md-block>
 # Changelog V3-W0423
-
-# **Regular:**
 
 ## Modules
 
@@ -109,5 +110,13 @@
 - Added `Show Chat Message` setting to `Screenshot` settings
 - Added `Stop All Momentum` key in `Creative Tools`
 </md-block>
+    <footer>
+        <div>
+            <br>
+            <br>
+            <hr>
+            <p>Copyright © 2023 Onix Client</p>
+        </div>
+    </footer>
 	</body>
 </html>
