--- a/changelog.html
+++ b/changelog.html
@@ -8,9 +8,7 @@
     <title>Onix Client</title>
     <meta content="Onix Client" property="og:title">
     <meta content="https://onixclient.com" property="og:url">
-    <meta content="Onix Client is a legitimate client for Minecraft: Bedrock Edition.
-          With over 40 fully customisable, built-in modules, and over 75 fully customisable, community-made modules.
-          Onix Client is truly the best client for Minecraft: Bedrock Edition." property="og:description">
+    <meta content="Onix Client V3 Changelog. All changes will be listed on this site!" property="og:description">
     <meta content="https://onixclient.com/assets/biglogo.png" property="og:image">
     <meta content="#008FC1" data-react-helmet="true" name="theme-color">
 </head>
