--- a/apply.html
+++ b/apply.html
@@ -8,7 +8,11 @@
     <title>Onix Client</title>
     <meta content="Onix Client Helper Application" property="og:title">
     <meta content="https://forms.gle/yJpfeosEHK5gBy5x9" property="og:url">
-    <meta content="Here you can apply for Helper in the Onix Client discord server. Requirements: You need to be atleast 15 years old. You need to be atleast level 25 in the discord server. We will not make exceptions." property="og:description">
+    <meta content="Here you can apply for Helper in the Onix Client discord server.
+Requirements:
+You need to be atleast 15 years old. You need to be atleast level 25 in the discord server.
+
+We will NOT make exceptions." property="og:description">
     <meta content="https://onixclient.com/assets/discord.png" property="og:image">
     <meta content="#008FC1" data-react-helmet="true" name="theme-color">
 </head>
