--- a/changelog.html
+++ b/changelog.html
@@ -1,47 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8810880028192246" crossorigin="anonymous"></script>
-    <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
-    <link rel="stylesheet" href="styles/style.css" />
-    <link rel="icon" type="onixlogo" href="favicon.ico">
-    <title>Onix Client</title>
-    <meta content="Onix Client" property="og:title">
-    <meta content="https://onixclient.com" property="og:url">
-    <meta content="Onix Client V3 Changelog. All changes will be listed on this site!" property="og:description">
-    <meta content="https://onixclient.com/assets/biglogo.png" property="og:image">
-    <meta content="#008FC1" data-react-helmet="true" name="theme-color">
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8810880028192246"crossorigin="anonymous"></script>
+	<meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
+	<link rel="stylesheet" href="styles/style.css" />
+	<link rel="icon" type="onixlogo" href="favicon.ico">
+	<title>Onix Client</title>
+	<meta content="Onix Client Changelogs" property="og:title">
+	<meta content="https://onixclient.com/changelogs" property="og:url">
+	<meta content="Onix Client V3 Changelogs." property="og:description">
+	<meta content="https://onixclient.com/assets/biglogo.png" property="og:image">
+	<meta content="#008FC1" data-react-helmet="true" name="theme-color">
 </head>
-<body>
-    <div class="topbar">
-        <div class="logothing">
-            <a href="https://onixclient.com">
-                <img src="assets/biglogo.png" width="45" height="45" alt="logo">
-                <span class="name">
-                    ONIX CLIENT
-                </span>
-            </a>
-        </div>
-        <span class="navbar">
-            <a href="https://onixclient.com">Home</a>
-            <a href="faq">FAQ</a>
-            <a href="license">License</a>
-            <a href="https://onixclient.com/patreon" target="_blank" rel="noopener noreferrer">Donate</a>
-            <a href="https://docs.onixclient.com" target="_blank" rel="noopener noreferrer">Scripting</a>
-            <a href="download" class="download">Download</a>
-        </span>
-    </div>
-		<br><br>
-			<script type="module" src="https://md-block.verou.me/md-block.js"></script>
-<md-block>
-</md-block>
-    <footer>
-        <div>
-            <br>
-            <br>
-            <hr>
-            <p>Copyright © 2023 Onix Client</p>
-        </div>
-    </footer>
-	</body>
+<script type="text/javascript">
+    function Redirect() {
+        window.location = "https://onixclient.com/changelogs";
+    }
+    Redirect()
+</script>
 </html>
