removed .html from links

--- a/changelogs.html
+++ b/changelogs.html
@@ -848,10 +848,10 @@
 				<div class="page-body">
 					<h2 id="ccc26b96-1ac7-4443-982f-2f5cff43334c" class=""><strong>V3-W0523</strong></h2>
 					<figure id="eafe9477-6d77-46f1-801a-e766c87c7ec2" class="link-to-page"><a
-							href="changelogs/changelog-V3-W0523.html"><span class="icon">😀</span>Changelog V3-W0523</a>
+							href="changelogs/changelog-V3-W0523"><span class="icon">😀</span>Changelog V3-W0523</a>
 					</figure>
 					<figure id="69991a8c-0960-41bf-a7e1-c15999523826" class="link-to-page"><a
-							href="changelogs/changelog-V3-W0523-Scripting.html"><span class="icon">🚿</span>Changelog
+							href="changelogs/changelog-V3-W0523-Scripting"><span class="icon">🚿</span>Changelog
 							V3-W0523-Scripting</a></figure>
 					<p id="5a900c44-63db-4640-b972-f51f8d6dcb51" class="">
 					</p>
