--- a/changelogs/changelog-V3-W0523-Scripting.html
+++ b/changelogs/changelog-V3-W0523-Scripting.html
@@ -842,7 +842,7 @@
 			<article id="69991a8c-0960-41bf-a7e1-c15999523826" class="page sans">
 				<header>
 					<hr id="d46c5113-48d1-410c-a3fa-66cbb8690e81" />
-					<h2 id="91e74d7a-613a-4d0c-bb95-9b6c3c3de096" class=""><a href="../changelogs.html">
+					<h2 id="91e74d7a-613a-4d0c-bb95-9b6c3c3de096" class=""><a href="../changelogs">
 						<img class="icon" src="https://www.notion.so/icons/drafts_brown.svg" />Changelogs</a> </h2>
 						<hr id="a7f4a6ea-2eeb-4b77-9b92-005df21b556d" />
 					<div class="page-header-icon undefined"><span class="icon">🚿</span></div>
