--- a/changelogs/changelog-V3-W0523.html
+++ b/changelogs/changelog-V3-W0523.html
@@ -841,7 +841,7 @@
 			<article id="eafe9477-6d77-46f1-801a-e766c87c7ec2" class="page sans">
 				<header>
 					<hr id="9f50089f-4655-4619-b145-0a18b6c5a222" />
-					<h2 id="a11b6514-8250-42c8-abdf-dc2fff3ec725" class=""><a href="../changelogs.html"><img
+					<h2 id="a11b6514-8250-42c8-abdf-dc2fff3ec725" class=""><a href="../changelogs"><img
 								class="icon" src="https://www.notion.so/icons/drafts_brown.svg" />Changelogs</a> </h2>
 					<hr id="11faeeda-73ba-4e94-9887-e5fcb60ab3d0" />
 					<div class="page-header-icon undefined"><span class="icon">😀</span></div>
