--- a/changelogs/changelog-V3-W0523.html
+++ b/changelogs/changelog-V3-W0523.html
@@ -1020,7 +1020,7 @@
 						</ul>
 						<ul id="cab8edc0-f047-469b-b228-c2972002921a" class="bulleted-list">
 							<li style="list-style-type:disc">Added
-								<code>Added Don&#x27;t Display If No Pots/Soups</code> to
+								<code>Don&#x27;t Display If No Pots/Soups</code> to
 								<code>Potion Counter</code>
 							</li>
 						</ul>
@@ -1131,6 +1131,12 @@
 								</ul>
 							</li>
 						</ul>
+						<ul id="cab8edc0-f047-469b-b228-c2972002921a" class="bulleted-list">
+							<li style="list-style-type:disc">Added
+								<code>Flash When Hit/Soups</code> to
+								<code>Combo Counter</code>
+							</li>
+						</ul>
 					</div>
 					<hr id="bb4f6e1e-663b-49cb-b719-f653839a7639" />
 					<h1 id="e0eaed5b-30e4-43da-9aa9-90a0f31f5c81" class="">
@@ -1190,7 +1196,7 @@
 							</li>
 						</ul>
 						<ul id="70c57a8d-4634-464e-b938-7b5666d47804" class="bulleted-list">
-							<li style="list-style-type:disc">Removed Bowtie Cat</li>
+							<li style="list-style-type:disc">Added Bowtie Cat</li>
 						</ul>
 						<ul id="a004f050-15b5-41d3-afa2-7f8c43bd0382" class="bulleted-list">
 							<li style="list-style-type:disc">Added <code>Perspective</code> setting to
