--- a/changelogs/changelog-V3-W0523.html
+++ b/changelogs/changelog-V3-W0523.html
@@ -1133,7 +1133,7 @@
 						</ul>
 						<ul id="cab8edc0-f047-469b-b228-c2972002921a" class="bulleted-list">
 							<li style="list-style-type:disc">Added
-								<code>Flash When Hit/Soups</code> to
+								<code>Flash When Hit</code> to
 								<code>Combo Counter</code>
 							</li>
 						</ul>
