--- a/changelogs/changelog-V3-W0523.html
+++ b/changelogs/changelog-V3-W0523.html
@@ -1195,8 +1195,8 @@
 								<code>Creative Tools</code>
 							</li>
 						</ul>
-						<ul id="70c57a8d-4634-464e-b938-7b5666d47804" class="bulleted-list">
-							<li style="list-style-type:disc">Added Bowtie Cat</li>
+						<ul id="17279e89-284e-4095-a011-97b849ed28ee" class="bulleted-list">
+							<li style="list-style-type:disc">Added <code>Bowtie Cat</code></li>
 						</ul>
 						<ul id="a004f050-15b5-41d3-afa2-7f8c43bd0382" class="bulleted-list">
 							<li style="list-style-type:disc">Added <code>Perspective</code> setting to
