--- a/changelogs/changelog-V3-41.html
+++ b/changelogs/changelog-V3-41.html
@@ -10,7 +10,7 @@
 	<title>Onix Client Changelog</title>
 	<meta content="Onix Client Changelog" property="og:title">
 	<meta content="https://onixclient.com/changelogs" property="og:url">
-	<meta content="The Onix Client V3-W0523 changelog." property="og:description">
+	<meta content="The Onix Client V3.41 changelog." property="og:description">
 	<meta content="https://onixclient.com/assets/biglogo.png" property="og:image">
 	<meta content="#008FC1" data-react-helmet="true" name="theme-color">
 </head>
