--- a/changelogs/changelog-V3-41.html
+++ b/changelogs/changelog-V3-41.html
@@ -846,7 +846,7 @@
 			<div class="page-body">
 				<h1 id="178acad7-9059-4e7d-9c7d-8de6f8edc812" class="">General</h1>
 				<ul id="9012f7a6-b028-4e0c-b4bc-a5304aa28b12" class="bulleted-list">
-					<li style="list-style-type:disc">Added 1.19.62 support</li>
+					<li style="list-style-type:disc"><strong>Added 1.19.62 support</strong></li>
 				</ul>
 				<h1 id="f79a5310-2e3e-4510-afa1-c2a8906692a9" class="">Modules</h1>
 				<ul id="6bf48929-16e9-4355-a75f-468452ee0192" class="bulleted-list">
