--- a/scripting/repo.html
+++ b/scripting/repo.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins" />
     <link rel="icon" href="../favicon.ico" />
     <link rel="stylesheet" href="../styles/style.css" />
+    <meta content="Onix Client Script Repository" property="og:title">
+	<meta content="https://onixclient.com/scripting/repo" property="og:url">
+	<meta content="The Onix Client scripting repository for all scripts on the github repository, but in website form." property="og:description">
+	<meta content="https://onixclient.com/assets/scriptrepo.png" property="og:image">
+	<meta content="#008FC1" data-react-helmet="true" name="theme-color">
     <style>
         html {
             background: linear-gradient(180deg, #181818, #212121);
