--- a/features.html
+++ b/features.html
@@ -7,12 +7,10 @@
     <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="icon" type="onixlogo" href="favicon.ico">
-    <title>Onix Client</title>
-    <meta content="Onix Client" property="og:title">
+    <title>Onix Client - Features</title>
+    <meta content="Onix Client - Features" property="og:title">
     <meta content="https://onixclient.com" property="og:url">
-    <meta content="Onix Client is a legitimate client for Minecraft: Bedrock Edition.
-          With over 40 fully customisable, built-in modules, and over 75 fully customisable, community-made modules.
-          Onix Client is truly the best client for Minecraft: Bedrock Edition." property="og:description">
+    <meta content="The features list for Onix Client." property="og:description">
     <meta content="https://onixclient.com/assets/biglogo.png" property="og:image">
     <meta content="#008FC1" data-react-helmet="true" name="theme-color">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
