fixed home class being active on nav bar

--- a/features.html
+++ b/features.html
@@ -28,7 +28,7 @@
             </a>
         </div>
         <span class="navbar">
-            <a href="https://onixclient.com" class="active">Home</a>
+            <a href="https://onixclient.com">Home</a>
             <a href="faq">FAQ</a>
             <a href="license">License</a>
             <a href="https://onixclient.com/patreon" target="_blank" rel="noopener noreferrer">Donate</a>
