--- a/docs.html
+++ b/docs.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="icon" type="onixlogo" href="favicon.ico">
     <title>Onix Client</title>
-    <meta content="Onix Client Patreon" property="og:title">
-    <meta content="Onix Client - Patreon" property="og:site_name">
+    <meta content="Onix Client scripting documentation can be found here." property="og:title">
+    <meta content="Onix Client - Docs" property="og:site_name">
     <meta content="https://docs.onixclient.com" property="og:url">
     <meta content="https://onixclient.com/assets/onixlua.png" property="og:image">
     <meta content="#008FC1" data-react-helmet="true" name="theme-color">
