--- a/license.html
+++ b/license.html
@@ -37,31 +37,37 @@
             <h1 style="font-family: 'Poppins', sans-serif;">The Onix Client License</h1>
         </div>
         <section class="cb">
-                <p>Definitions: Us/We (the Onix Client developers), You (you reading this/using Onix Client)<br>
-                We own the Onix Client name, the logo, and its programs/binaries.<br>
-                You are subject to the following terms:<br>
-                - You <b>can</b>:<br></p>
-                <ul style="list-style-type: none;">
-                <li><p>• Talk about the client</p></li>
-                <li><p>• Show the logo in your YouTube thumbnail(s)</p></li>
-                <li><p>• Use the logo to showcase the client in rewiews, showcases, etc</p></li>
-                </ul>
-                <p>- You <b>cannot</b>:</p>
-                <ul style="list-style-type: none;">
-                <li><p>• Use the logo and name for your own product(s)</p>
-                <li><p>• Claim the logo and/or name as yours</p>
-                <li><p>• Promote your product with the logo and/or name</p>
-                <li><p>• Reupload or redistribute the client/launcher in different websites(Mediafire, Dropbox, your own Discord server, etc.)</p>
-                <li><p>• Own/Download an outdated/modified version of any of the product</p>
-                <li><p>• Use, distribute, and/or own older versions of any of our products</p>
-                </ul><p>
-                <b>Failure to comply with these terms will result in your content being taken down/us taking legal actions as needed</b><br><br>
-                If you do not agree with those terms:<br>
-                Delete all binaries logos, files do not use any of the products<br>
-                To remove it from the game close it<br>
-                if you use it anyway you agree to follow these terms<br>
-                You must be on the onix client discord if you desire to obtain a notification for license update.<br>
-                Extra notes : We don't want to be a boring company. We just want to protect our logo and name.<br></p>
+            <h2>Onix Client License Agreement</h2>
+            <p>This License Agreement (“Agreement”) is entered into between the creators of Onix Client (“We” or “Us”) and you (“You” or “User”) as a user of Onix Client or one of its binaries. This Agreement sets forth the terms and conditions under which you may use the Onix Client software.</p>
+            <br>
+            <h3>1. Permitted Actions:</h3>
+            <p>You may use the Onix Client software as permitted by this agreement. You may also discuss the Onix Client with others and use the logo in your YouTube thumbnails, and you may utilize the logo to showcase the client in reviews, showcases, and other similar contexts. We encourage you to spread the word about Onix Client in a positive manner and appreciate your support in promoting our brand.</p>
+            <br>
+            <h3>2. Prohibited Actions:</h3>
+            <p>You are not permitted to use the logo or name for your own product(s) or claim the logo and/or name as your own. You are also prohibited from promoting your product with the Onix Client logo and/or name. Additionally, you cannot reupload or redistribute the client/launcher in any way, shape, or form which is NOT within the download channel of the official Onix Client Discord server. Furthermore, distributing a modified version of the binaries, using or downloading an old version of them or modified version of any Onix Client product is strictly prohibited.</p>
+            <br>
+            <h3>3. License Scope:</h3>
+            <p>This agreement sets out the terms and conditions under which you may use the Onix Client software. Your use of the software constitutes your agreement to these terms. If you do not agree to these terms, you may not use the software.</p>
+            <br>
+            <h3>4. Liability Limitations:</h3>
+            <p>We will not be liable to you for any indirect, incidental, consequential, special, or punitive damages, including without limitation lost profits, data loss, or business interruption, arising out of or in connection with this agreement or your use of the software.</p>
+            <br>
+            <h3>5. Enforcement:</h3>
+            <p>We take our intellectual property seriously, and any unauthorized use or distribution of our software or associated assets will result in legal action. Your content may also be removed in such cases. By continuing to use Onix Client, you agree to follow these terms.</p>
+            <br>
+            <h3>6. License Updates:</h3>
+            <p>We reserve the right to modify this License Agreement at any time, with notice to you. By continuing to use Onix Client after any changes have been made, you are acknowledging and accepting the updated terms.</p>
+            <br>
+            <h3>7. Membership:</h3>
+            <p>To receive notifications about updates to the license, you may join the Onix Client Discord server. Membership is open to anyone who does or does not use Onix Client or is interested in staying up-to-date with our latest developments.</p>
+            <br>
+            <h3>8. Our Responsibility:</h3>
+            <p>We are committed to providing a quality product and protecting our intellectual property. We value our users and their contributions to our community and appreciate your cooperation in upholding these standards.</p>
+            <br>
+            <h3>9. Your Responsibility:</h3>
+            <p>As an Onix Client user, you are part of a community that values excellence and innovation. We encourage you to continue enjoying our product while adhering to the Onix Client License. By doing so, you will be helping to maintain the integrity of our brand and ensuring that our users have the best possible experience.</p>
+            <br>
+            <p>Thank you for choosing Onix Client.</p>
           </section>
           <footer>
             <div>
