--- a/features.html
+++ b/features.html
@@ -84,6 +84,7 @@
                     <li>Theme Editor</li>
                     <li>Third Person Nametag</li>
                     <li>Toggle Sprint/Sneak</li>
+                    <li>VSync Disabler</li>
                     <li>Waypoints</li>
                     <li>Zoom</li>
                 </ul>
@@ -102,9 +103,16 @@
                     <i class="fa fa-caret-down"></i>
                 </button>
                 <ul id="v3feature-list" style="display: block;">
+                    <h2>Main Exclusives</h2>
+                    <li>New UI</li>
+                    <li>Chroma Customiser</li>
+                    <li>Client Themes</li>
+                    <li>Countless Settings in Global Settings</li>
+                    <li>Access to <a href="https://onixclient.com/scripting/repo" target="_blank" rel="noopener noreferrer">Scripting</a></li>
+                    <br>
+                    <h2>Modules</h2>
                     <b>
                         <li>Everything in V2</li>
-                        <li>Access to Scripting</li>
                     </b>
                     <li>Arrow Counter</li>
                     <li>Auto Text Hotkey</li>
@@ -113,7 +121,6 @@
                     <li>Day Counter</li>
                     <li>Dynamic Light</li>
                     <li>GUI Scale Changer</li>
-                    <li>Global Settings</li>
                     <li>Low Health Warning</li>
                     <li>Motion Blur</li>
                     <li>Movable Chat</li>
@@ -122,7 +129,6 @@
                     <li>Ping Display</li>
                     <li>Potion/Soup Counter</li>
                     <li>Snaplook</li>
-
                     <p>& many more to come!</p>
 
                 </ul>
