--- a/donors.html
+++ b/donors.html
@@ -2,17 +2,17 @@
 <html>
 <head>
   <title>Donation Leaderboard</title>
-  <head>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8810880028192246" crossorigin="anonymous"></script>
-    <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
-    <link rel="stylesheet" href="styles/style.css" />
-    <link rel="icon" type="onixlogo" href="favicon.ico">
-    <title>Onix Client</title>
-    <meta content="Onix Client Top Donors" property="og:title">
-    <meta content="https://discord.gg/onixclient" property="og:url">
-    <meta content="The best Minecraft: Bedrock Edition client! (Windows 10/11 only)." property="og:description">
-    <meta content="https://onixclient.com/assets/discord.png" property="og:image">
-    <meta content="#008FC1" data-react-helmet="true" name="theme-color">
+<head>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8810880028192246" crossorigin="anonymous"></script>
+  <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
+  <link rel="stylesheet" href="styles/style.css" />
+  <link rel="icon" type="onixlogo" href="favicon.ico">
+  <title>Onix Client - Top Donors</title>
+  <meta content="Onix Client - Top Donors" property="og:title">
+  <meta content="https://onixclient.com/donors.png" property="og:url">
+  <meta content="The Onix Client is the best Minecraft: Bedrock Edition client for Windows 10/11. Check out our top donors!" property="og:description">
+  <meta content="https://onixclient.com/assets/premium.png" property="og:image">
+  <meta content="#008FC1" data-react-helmet="true" name="theme-color">
 </head>
   <style>
     #leaderboard {
