--- a/donors.html
+++ b/donors.html
@@ -16,7 +16,7 @@
 </head>
   <style>
     #leaderboard {
-      width: 350px;
+      width: 500px;
       margin: 0 auto;
       font-family: 'Poppins', sand-serif;
     }
@@ -40,29 +40,30 @@
 
     #leaderboard .amount {
       float: right;
+      color: #a0a0a0;
     }
 
     /* Custom styles for top donors (they are gold silver and bronze internally because i originally coloured them that way, but decided to change it to this)*/
     #leaderboard .gold {
       color: #3498db;
-      font-size: 18px;
+      font-size: 32px;
       font-weight: bold;
     }
 
     #leaderboard .silver {
       color: #ffe100;
-      font-size: 16px;
+      font-size: 30px;
     }
 
     #leaderboard .bronze {
       color: #f79e3a;
-      font-size: 14px;
+      font-size: 28px;
     }
 
     /* Custom styles for other donors */
     #leaderboard .othertier {
       color: lightgray;
-      font-size: 12px;
+      font-size: 24px;
     }
   </style>
 </head>
