--- a/scripting/repo.html
+++ b/scripting/repo.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <title>Onix Client Script Downloader</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins" />
-    <link rel="icon" href="../favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="../favicon.ico" />
     <link rel="stylesheet" href="../styles/style.css" />
     <meta content="Onix Client Script Repository" property="og:title">
     <meta content="https://onixclient.com/scripting/repo" property="og:url">
