--- a/download.html
+++ b/download.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
     <link rel="stylesheet" href="styles/style.css" />
-    <link rel="icon" type="onixlogo" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <title>Onix Client</title>
     <meta content="Onix Client Download" property="og:title">
     <meta content="Onix Client - Download" property="og:site_name">
