--- a/features.html
+++ b/features.html
@@ -6,7 +6,7 @@
         crossorigin="anonymous"></script>
     <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
     <link rel="stylesheet" href="styles/style.css" />
-    <link rel="icon" type="onixlogo" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <title>Onix Client - Features</title>
     <meta content="Onix Client - Features" property="og:title">
     <meta content="https://onixclient.com" property="og:url">
