--- a/luabasics.html
+++ b/luabasics.html
@@ -5,7 +5,7 @@
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8810880028192246" crossorigin="anonymous"></script>
         <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
         <link rel="stylesheet" href="styles/style.css"/>
-        <link rel="icon" type="onixlogo" href="favicon.ico">
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
         <title>Onix Client</title>
     </head>
     <body>
