--- a/premium.html
+++ b/premium.html
@@ -6,7 +6,7 @@
         crossorigin="anonymous"></script>
     <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
     <link rel="stylesheet" href="styles/style.css" />
-    <link rel="icon" type="onixlogo" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <title>Ready for more? | Onix Client</title>
     <meta content="Ready for more? | Onix Client" property="og:title">
     <meta content="https://onixclient.com/premium" property="og:url">
