--- a/todo.html
+++ b/todo.html
@@ -14,7 +14,7 @@
 </head>
 <script type="text/javascript">
     function Redirect() {
-        window.location = "https://flowery-dessert-71c.notion.site/f5fca77ccaff49d6a3352e8e9a46cae5";
+        window.location = "https://onixclient.notion.site/f5fca77ccaff49d6a3352e8e9a46cae5";
     }
     Redirect();
 </script>
