--- a/changelogs.html
+++ b/changelogs.html
@@ -14,7 +14,7 @@
 </head>
 <script type="text/javascript">
     function Redirect() {
-        window.location = "https://flowery-dessert-71c.notion.site/Changelogs-33ee4a3467e44a85b2f35a60425a8875";
+        window.location = "https://onixclient.notion.site/Changelogs-33ee4a3467e44a85b2f35a60425a8875";
     }
     Redirect()
 </script>
